# libratp

./: .gitignore  README.md  annotation-glossary.html  autogen.sh  configure.ac  index.html  ix01.html  libratp-Core-library-operations.html  libratp-Library-logging.html  libratp-Library-version.html  libratp-Link-object.html  libratp.devhelp2  pt01.html  pt02.html
doc/reference/: Makefile.am  libratp-docs.xml  libratp-sections.txt
m4/: compiler-warnings.m4
src/: Makefile.am
src/common/: common.c  common.h
src/libratp/: Makefile.am  ratp-base.c  ratp-link-fifo.c  ratp-link-tty.c  ratp-link.c  ratp-link.h  ratp-log.c  ratp-log.h  ratp-message.c  ratp-message.h  ratp-sync.c  ratp.h.in  ratp.pc.in
src/ratp-cli/: Makefile.am  ratp-cli.c
